feat: Update added core logic for users & first API endpoints
- Added the first 5 API operations.
- Added the core logic for those 5 operations -> LIST, GET(By Id), GET(By Veteran Type), POST(Create), DELETE.
