# domain/src/main/java/com/archimedes/main/domain/commons/enums/VeteranTypes.java
@@ -2,6 +2,8 @@ package com.archimedes.main.domain.commons.enums;
 
 import lombok.Getter;
 
+import java.util.Map;
+
 @Getter
 public enum VeteranTypes {
     NOT_ENROLLED("not_enrolled"),
@@ -14,4 +16,11 @@ public enum VeteranTypes {
     VeteranTypes(String name) {
         this.name = name;
     }
+
+    public static final Map<String,String> VALUES_MAP = Map.of(
+      "veteran", VeteranTypes.VETERAN.getName(),
+      "newbie", VeteranTypes.NEWBIE.getName(),
+      "regular", VeteranTypes.REGULAR.getName(),
+      "not_enrolled", VeteranTypes.NOT_ENROLLED.getName()
+    );
 }
