# input-adapters/api-rest/src/contracts/swagger.yaml
@@ -1,23 +1,17 @@
 openapi: 3.0.3
 info:
   title: Archimedes Swagger Contract
-  termsOfService: http://swagger.io/terms/
   contact:
-    email: apiteam@swagger.io
+    email: crojasfer31@gmail.com
   license:
     name: Apache 2.0
     url: http://www.apache.org/licenses/LICENSE-2.0.html
   version: 1.0.11
-externalDocs:
-  description: Find out more about Swagger
-  url: http://swagger.io
-servers:
-  - url: https://petstore3.swagger.io/api/v3
 tags:
   - name: users
     description: Every user related operation
 paths:
-  /users:
+  /users/{usersId}:
     put:
       tags:
         - users
@@ -44,13 +38,34 @@ paths:
           description: Pet not found
         '422':
           description: Validation exception
-      security:
-        - petstore_auth:
-            - write:pets
-            - read:pets
+  /delete/{userId}:
+      delete:
+        tags:
+          - users
+        summary: Deletes a user
+        description: delete a user
+        operationId: deleteUserById
+        parameters:
+          - name: api_key
+            in: header
+            description: ''
+            required: false
+            schema:
+              type: string
+          - name: userId
+            in: path
+            description: User id to delete
+            required: true
+            schema:
+              type: integer
+              format: int64
+        responses:
+          '400':
+            description: Invalid user value
+  /create:
     post:
       tags:
-        - pet
+        - users
       summary: Add a new user
       operationId: addUser
       requestBody:
@@ -71,90 +86,31 @@ paths:
           description: Invalid input
         '422':
           description: Validation exception
-      security:
-        - petstore_auth:
-            - write:pets
-            - read:pets
-  /users/findByStatus:
+  /users:
     get:
       tags:
         - users
-      summary: Finds Users by status
-      description: Multiple status values can be provided with comma separated strings
-      operationId: findUsersByStatus
-      parameters:
-        - name: status
-          in: query
-          description: Status values that need to be considered for filter
-          required: false
-          explode: true
-          schema:
-            type: string
-            default: available
-            enum:
-              - active
-              - inactive
+      summary: Find users
+      description: Indexes users
+      operationId: list
       responses:
         '200':
           description: successful operation
           content:
             application/json:
               schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Pet'
+                $ref: '#/components/schemas/Pet'
         '400':
-          description: Invalid status value
-      security:
-        - petstore_auth:
-            - write:pets
-            - read:pets
-  /users/findByVeteranType:
+          description: Invalid ID supplied
+        '404':
+          description: Pet not found
+  /users/{userId}:
     get:
       tags:
-        - pet
-      summary: Finds Users by veteran type
-      description: Multiple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.
-      operationId: findPetsByTags
-      parameters:
-        - name: tags
-          in: query
-          description: Tags to filter by
-          required: false
-          explode: true
-          schema:
-            type: array
-            enum:
-              - veteran
-              - regular
-              -
-      responses:
-        '200':
-          description: successful operation
-          content:
-            application/json:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Pet'
-            application/xml:
-              schema:
-                type: array
-                items:
-                  $ref: '#/components/schemas/Pet'
-        '400':
-          description: Invalid tag value
-      security:
-        - petstore_auth:
-            - write:pets
-            - read:pets
-  /pet/{petId}:
-    get:
-      tags:
-        - pet
-      summary: Find pet by ID
-      description: Returns a single pet
-      operationId: getPetById
+        - users
+      summary: Find user by ID
+      description: Returns a single user
+      operationId: getUserById
       parameters:
         - name: petId
           in: path
@@ -170,114 +126,167 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Pet'
-            application/xml:
-              schema:
-                $ref: '#/components/schemas/Pet'
         '400':
           description: Invalid ID supplied
         '404':
           description: Pet not found
-      security:
-        - api_key: []
-        - petstore_auth:
-            - write:pets
-            - read:pets
-    post:
+  /users/findByStatus:
+    get:
       tags:
-        - pet
-      summary: Updates a pet in the store with form data
-      description: ''
-      operationId: updatePetWithForm
+        - users
+      summary: Finds Users by status
+      description: Multiple status values can be provided with comma separated strings
+      operationId: findUsersByStatus
       parameters:
-        - name: petId
-          in: path
-          description: ID of pet that needs to be updated
-          required: true
-          schema:
-            type: integer
-            format: int64
-        - name: name
-          in: query
-          description: Name of pet that needs to be updated
-          schema:
-            type: string
         - name: status
           in: query
-          description: Status of pet that needs to be updated
-          schema:
-            type: string
-      responses:
-        '400':
-          description: Invalid input
-      security:
-        - petstore_auth:
-            - write:pets
-            - read:pets
-    delete:
-      tags:
-        - pet
-      summary: Deletes a pet
-      description: delete a pet
-      operationId: deletePet
-      parameters:
-        - name: api_key
-          in: header
-          description: ''
+          description: Status values that need to be considered for filter
           required: false
+          explode: true
           schema:
             type: string
-        - name: petId
-          in: path
-          description: Pet id to delete
-          required: true
-          schema:
-            type: integer
-            format: int64
-      responses:
-        '400':
-          description: Invalid pet value
-      security:
-        - petstore_auth:
-            - write:pets
-            - read:pets
-  /pet/{petId}/uploadImage:
-    post:
-      tags:
-        - pet
-      summary: uploads an image
-      description: ''
-      operationId: uploadFile
-      parameters:
-        - name: petId
-          in: path
-          description: ID of pet to update
-          required: true
-          schema:
-            type: integer
-            format: int64
-        - name: additionalMetadata
-          in: query
-          description: Additional Metadata
-          required: false
-          schema:
-            type: string
-      requestBody:
-        content:
-          application/octet-stream:
-            schema:
-              type: string
-              format: binary
+            default: active
+            enum:
+              - active
+              - inactive
       responses:
         '200':
           description: successful operation
           content:
             application/json:
               schema:
-                $ref: '#/components/schemas/ApiResponse'
-      security:
-        - petstore_auth:
-            - write:pets
-            - read:pets
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
+        '400':
+          description: Invalid status value
+  /users/findByVeteranType:
+    get:
+      tags:
+        - users
+      summary: Finds Users by their veteran type
+      description: Multiple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.
+      operationId: findPetsByTags
+      parameters:
+        - name: tags
+          in: query
+          description: Tags to filter by
+          required: true
+          explode: true
+          schema:
+            type: string
+            default: nam
+            enum:
+              - veteran
+              - regular
+              - nam (not_a_member)
+              - newbie
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
+        '400':
+          description: Invalid tag value
+  /users/findByCurrencyType:
+    get:
+      tags:
+        - users
+      summary: Finds Users by their Currency type
+      description: Multiple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.
+      operationId: findPetsByTags
+      parameters:
+        - name: tags
+          in: query
+          description: Tags to filter by
+          required: true
+          explode: true
+          schema:
+            type: string
+            default: nam
+            enum:
+              - euro
+              - dollar
+              - chf
+              - yen
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
+        '400':
+          description: Invalid tag value
+  /users/findByGroupCategoryType:
+    get:
+      tags:
+        - users
+      summary: Finds Users by their Group Category type
+      description: Multiple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.
+      operationId: findPetsByTags
+      parameters:
+        - name: tags
+          in: query
+          description: Tags to filter by
+          required: true
+          explode: true
+          schema:
+            type: string
+            default: nam
+            enum:
+              - nam (not_a_member)
+              - regular
+              - exposition
+              - especial
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
+        '400':
+          description: Invalid tag value
+  /users/findByMemberType:
+    get:
+      tags:
+        - users
+      summary: Finds Users by their Member type
+      description: Multiple tags can be provided with comma separated strings. Use tag1, tag2, tag3 for testing.
+      operationId: findPetsByTags
+      parameters:
+        - name: tags
+          in: query
+          description: Tags to filter by
+          required: true
+          explode: true
+          schema:
+            type: string
+            default: nam
+            enum:
+              - nam (not_a_member)
+              - kid
+              - adult
+      responses:
+        '200':
+          description: successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/Pet'
+        '400':
+          description: Invalid tag value
   /store/inventory:
     get:
       tags:
@@ -326,10 +335,10 @@ paths:
           description: Invalid input
         '422':
           description: Validation exception
+
+  # To Be defined
   /store/order/{orderId}:
     get:
-      tags:
-        - store
       summary: Find purchase order by ID
       description: For valid response try integer IDs with value <= 5 or > 10. Other values will generate exceptions.
       operationId: getOrderById
@@ -356,8 +365,6 @@ paths:
         '404':
           description: Order not found
     delete:
-      tags:
-        - store
       summary: Delete purchase order by ID
       description: For valid response try integer IDs with value < 1000. Anything above 1000 or nonintegers will generate API errors
       operationId: deleteOrder
@@ -376,8 +383,6 @@ paths:
           description: Order not found
   /user:
     post:
-      tags:
-        - user
       summary: Create user
       description: This can only be done by the logged in user.
       operationId: createUser
@@ -405,8 +410,6 @@ paths:
                 $ref: '#/components/schemas/User'
   /user/createWithList:
     post:
-      tags:
-        - user
       summary: Creates list of users with given input array
       description: Creates list of users with given input array
       operationId: createUsersWithListInput
@@ -431,8 +434,6 @@ paths:
           description: successful operation
   /user/login:
     get:
-      tags:
-        - user
       summary: Logs user into the system
       description: ''
       operationId: loginUser
@@ -474,8 +475,6 @@ paths:
           description: Invalid username/password supplied
   /user/logout:
     get:
-      tags:
-        - user
       summary: Logs out current logged in user session
       description: ''
       operationId: logoutUser
@@ -485,8 +484,6 @@ paths:
           description: successful operation
   /user/{username}:
     get:
-      tags:
-        - user
       summary: Get user by user name
       description: ''
       operationId: getUserByName
@@ -512,8 +509,6 @@ paths:
         '404':
           description: User not found
     put:
-      tags:
-        - user
       summary: Update user
       description: This can only be done by the logged in user.
       operationId: updateUser
@@ -540,11 +535,9 @@ paths:
         default:
           description: successful operation
     delete:
-      tags:
-        - user
       summary: Delete user
       description: This can only be done by the logged in user.
-      operationId: deleteUser
+      operationId: deleteUserById
       parameters:
         - name: username
           in: path
